@@ -1,12 +1,2 @@
 
-
-# install python modules
-if HAVE_PYTHON
-
 noinst_PYTHON = build.py
-
-else
-
-EXTRA_DIST = build.py
-
-endif
