@@ -1,5 +1,5 @@
 
-sourcefiles = \
+copomus_DATA = \
 		__init__.py \
 		candidate_filters.py \
 		candidate_selectors.py \
@@ -8,23 +8,5 @@ sourcefiles = \
 		mutation.py \
 		mutation_generators.py
 		
-# install python modules
-if HAVE_PYTHON
+copomusdir = $(bindir)/copomus
 
-# copomus installation
-if INSTALL_INTARNAPVALUE
-
-copomus_PYTHON = $(sourcefiles)
-		
-copomusdir = $(pythondir)/copomus
-
-else
-noinst_PYTHON = $(sourcefiles)
-endif
-
-else
-
-# ensure files are part of distribution if python not available
-EXTRA_DIST = $(sourcefiles)
-
-endif
